[gd_scene load_steps=3 format=3 uid="uid://06ycm4wh8t75"]

[ext_resource type="Script" uid="uid://lpeajxwunl6a" path="res://Scripts/2d/casa_final.gd" id="1_yttu4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_13wfd"]
size = Vector2(66, 58)

[node name="CasaFinal" type="Node2D"]
script = ExtResource("1_yttu4")

[node name="CasaVisual" type="ColorRect" parent="."]
offset_left = -16.0
offset_top = -80.0
offset_right = 72.0

[node name="AreaInteraccion" type="Area2D" parent="."]
position = Vector2(24, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaInteraccion"]
position = Vector2(0, -24)
shape = SubResource("RectangleShape2D_13wfd")

[node name="Puerta" type="StaticBody2D" parent="."]
visible = false
position = Vector2(16, -48)

[connection signal="body_entered" from="AreaInteraccion" to="." method="_on_area_interaccion_body_entered"]
[connection signal="body_exited" from="AreaInteraccion" to="." method="_on_area_interaccion_body_exited"]
